--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="window.location.reload();">Refresh page</button>
     <script src="script.js"></script>
 </body>
 </html>
