Refactor game logic to use buttons for player choices and display results dynamically

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick="window.location.reload();">Refresh page</button>
+    <button data-choice="rock" id="choiceRock">Play Rock</button>
+    <button data-choice="paper" id="choicePaper">Play Paper</button>
+    <button data-choice="scissors" id="choiceScissors">Play Scissors</button>
     <script src="script.js"></script>
 </body>
 </html>
